# axor

./: Cargo.toml  LICENSE  README.md
crates/axor/: Cargo.toml  README.md
crates/axor-macros/: Cargo.toml
crates/axor-macros/src/: agent_macro.rs  lib.rs  operation_macro.rs
crates/axor-web/: Cargo.toml
crates/axor/src/: agent.rs  context.rs  inject.rs  lib.rs  operation.rs  payload.rs  prelude.rs
crates/axor/test/: hello_world_no_macros.rs
crates/axor/tests/: hello_with_macros.rs  hello_world_no_macros.rs
