[package]
name = "axor-macros"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Core of the Axor framework: agent-based business logic with typed operations and injection."
authors = ["riana <riana@kinai.io>"]
repository = "https://github.com/kinai-io/axor-macros"
keywords = ["framework", "rust", "agent", "di", "backend"]
categories = ["web-programming", "development-tools::build-utils"]
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
