[package]
name = "axor"
version = "0.1.1"
edition = "2021"
description = "Core of the Axor framework: agent-based business logic with typed operations and injection."
license = "MIT"
authors = ["riana <riana@kinai.io>"]
repository = "https://github.com/kinai-io/axor"
keywords = ["framework", "rust", "agent", "di", "backend"]
categories = ["web-programming", "development-tools::build-utils"]
readme = "./README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
downcast-rs = "2.0.1"

# axor-macros = { path = "../axor-macros" }
axor-macros = "0.1"

[features]
default = []
